--- a/HR4CEnouvo/assets/css/style.css
+++ b/HR4CEnouvo/assets/css/style.css
@@ -15,8 +15,9 @@ body {
 }
 .btn-color {
   background-color: var(--btn-color);
-  border-radius: 0.375rem;
+  border-radius: 12px;
   color: var(--white-color);
+  width: 100%;
 }
 .text-title {
   color: var(--blue-color);
@@ -89,7 +90,7 @@ body {
 }
 .nav-item {
   display: inline-block;
-  margin-left: 18px;
+  margin: 0 0 0 30px;
   font-size: 18px;
   font-family: "Open Sans";
 }
@@ -145,10 +146,15 @@ body {
   letter-spacing: 0.2px;
   margin-bottom: 68px;
 }
+.headding-flex{
+  display: flex;
+  padding: 0;
+}
 .box-child-after {
 }
 .box-child-after-form {
-  padding-top: 296px;
+  position: relative;
+  padding-top: 38px;
   margin: 8px;
 }
 .box-child-after-label {
@@ -174,9 +180,7 @@ button {
   width: 115px;
   height: 60px;
 }
-.padding {
-  padding: 0;
-}
+
 .box-child-after-input {
   padding-left: 30px;
 }
@@ -184,10 +188,6 @@ button {
   position: absolute;
   padding: 10px;
   color: var(--blue-color);
-}
-.box-child-after-form {
-  position: relative;
-  padding-top: 38px;
 }
 .form-select {
   cursor: pointer;
